--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@types/three": "^0.174.0",
     "@types/uuid": "^10.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "three": "^0.174.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
